# rotary-encoder-embedded

./: Cargo.toml  LICENSE.md  README.md
.github/workflows/: build.yml
src/: angular.rs  angular_velocity.rs  debounced.rs  full_step.rs  lib.rs  quadrature.rs  standard.rs  table.rs
src/table/: full.rs  half.rs  mod.rs
