[package]
name = "rotary-encoder-embedded"
version = "0.3.0"
authors = ["Oliver Stenning <code@ostenning.com>"]
edition = "2018"
description = "A rotary-encoder library built with embedded-hal"
keywords = ["embedded-hal", "rotary-encoder", "rotary", "encoder"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ostenning/rotary-encoder-embedded"

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0", features = ["eh0"] }
