[package]
name = "rotary-encoder-embedded"
version = "0.3.1"
authors = ["Oliver <18360865+ost-ing@users.noreply.github.com>"]
edition = "2018"
description = "A rotary-encoder library built with embedded-hal"
keywords = ["embedded-hal", "rotary-encoder", "rotary", "encoder"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ost-ing/rotary-encoder-embedded"

[dependencies]
embedded-hal = { version = "1.0.0"}

[dev-dependencies]
embedded-hal-mock = { version = "0.11.*", features = ["eh1"] }
